changes for LoRA finetune, hyperparam search, changed sampling so it can handle LoRA

--- a/notebooks/tokenizing_BG.ipynb
+++ b/notebooks/tokenizing_BG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'/home/uccacbo/CrystaLLM'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,14 +834,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "identifying starts...: 100%|██████████| 52582/52582 [00:00<00:00, 660951.26it/s]\n",
+      "identifying starts...: 100%|████| 56791747/56791747 [01:29<00:00, 633529.56it/s]\n",
       "writing start indices...\n"
      ]
     }
@@ -849,22 +849,22 @@
    "source": [
     "# Identifying start indices\n",
     "!python bin/identify_starts.py \\\n",
-    "--dataset_fname BG_cifs_more_tokens/BG_cifs_more_all.tar.gz \\\n",
-    "--out_fname BG_cifs_more_tokens/starts_v1_train.pkl"
+    "--dataset_fname compressed_datasets_models/BG_large_tokens.tar.gz \\\n",
+    "--out_fname CIF_BG_proj/BG_large_tokens/starts.pkl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 457, 785, 1144, 2240]"
+       "[0, 519, 849, 1245, 1509]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +874,7 @@
     "import pickle\n",
     "\n",
     "# Load the start indices with pickle not gzip\n",
-    "with open(\"BG_cifs_more_tokens/starts_v1_train.pkl\", \"rb\") as f:\n",
+    "with open(\"CIF_BG_proj/BG_large_tokens/starts.pkl\", \"rb\") as f:\n",
     "    starts = pickle.load(f)\n",
     "\n",
     "# Display the first few start indices\n",
