--- a/notebooks/training_model_BG.ipynb
+++ b/notebooks/training_model_BG.ipynb
@@ -2,34 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/uccacbo/miniconda3/envs/crystallm_venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import numpy as np\n",
-    "import pickle\n",
-    "from transformers import GPT2LMHeadModel, GPT2Tokenizer\n",
-    "from crystallm import (\n",
-    "    GPT,\n",
-    "    GPTConfig,\n",
-    "    CIFTokenizer\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +11,7 @@
        "'/home/uccacbo/CrystaLLM'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1476,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1484,10 +1457,10 @@
      "output_type": "stream",
      "text": [
       "Using configuration:\n",
-      "out_dir: finetuned_models/BG_LoRA\n",
+      "out_dir: finetuned_models/BG_head\n",
       "start: FILE:sampling/prompts/Ti4Ga2Cu2.txt\n",
       "num_samples: 1\n",
-      "max_new_tokens: 100\n",
+      "max_new_tokens: 2000\n",
       "temperature: 0.8\n",
       "top_k: 10\n",
       "seed: 1337\n",
@@ -1508,12 +1481,11 @@
       "bias: false\n",
       "vocab_size: 372\n",
       "dropout: 0.1\n",
-      "finetune_method: LoRA\n",
+      "finetune_method: freeze_head\n",
       "\n",
       "number of parameters: 201.74M\n",
-      "Loaded state_dict with LoRA compatibility.\n",
       "Model loaded successfully.\n",
-      "Best validation loss (from checkpoint): 0.2797\n",
+      "Best validation loss (from checkpoint): 0.3454\n",
       "Training loss not found in checkpoint.\n",
       "Generating samples...\n",
       "data_Ti4Ga2Cu2\n",
@@ -1552,13 +1524,15 @@
       "Ti Ti0 4 0.2428 0.0000 0.0000 1.0\n",
       "Ga Ga1 2 0.0000 0.5000 0.5000 1.0\n",
       "Cu Cu2 2 0.0000 0.0000 0.0000 1.0\n",
-      "Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:Bandgap_eV:\n",
+      "Bandgap_eV: 0.00\n",
+      "\n",
+      "\n",
       "---------------\n"
      ]
     }
    ],
    "source": [
-    "!python bin/sample.py --config sampling/prompt_config/BG_gen_ft_LoRA.yaml"
+    "!python bin/sample.py --config sampling/prompt_config/BG_gen_ft_head.yaml"
    ]
   },
   {
@@ -1800,49 +1774,6 @@
    "metadata": {},
    "source": [
     "### RSync files to here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The authenticity of host 'myriad.rc.ucl.ac.uk (193.60.252.107)' can't be established.\n",
-      "ED25519 key fingerprint is SHA256:waqBYWAb+g1lwUGWz8ku4M48McIBWGCdpMoU8l8j6tU.\n",
-      "This key is not known by any other names.\n",
-      "Are you sure you want to continue connecting (yes/no/[fingerprint])? ^C\n"
-     ]
-    }
-   ],
-   "source": [
-    "!rsync -avz --progress \\\n",
-    "uccacbo@myriad.rc.ucl.ac.uk:/home/uccacbo/CrystaLLM/BG_CIF_dataset.tar.gz /home/uccacbo/CrystaLLM/BG_datasets/BG_CIF_dataset.tar.gz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: psutil in /home/uccacbo/miniconda3/envs/crystallm_venv/lib/python3.10/site-packages (6.0.0)\n",
-      "Collecting pynvml\n",
-      "  Downloading pynvml-11.5.3-py3-none-any.whl.metadata (8.8 kB)\n",
-      "Downloading pynvml-11.5.3-py3-none-any.whl (53 kB)\n",
-      "Installing collected packages: pynvml\n",
-      "Successfully installed pynvml-11.5.3\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install psutil pynvml\n"
    ]
   },
   {
