--- a/notebooks/tokenizing_BG.ipynb
+++ b/notebooks/tokenizing_BG.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
     "            return None\n",
     "\n",
     "# Path to your .pkl.gz file\n",
-    "file_path = 'cifs_v1_dedup.pkl.gz'\n",
+    "file_path = 'compressed_datasets_models/cifs_v1_dedup.pkl.gz'\n",
     "\n",
     "# Load and inspect a small part of the data\n",
     "sample_data = load_partial_pickle(file_path, num_entries=100)"
@@ -252,17 +252,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Fe(PO3)4',\n",
-       "  \"# generated using pymatgen\\ndata_Fe(PO3)4\\n_symmetry_space_group_name_H-M   C2/c\\n_cell_length_a   12.81796307\\n_cell_length_b   7.94044656\\n_cell_length_c   10.21684027\\n_cell_angle_alpha   90.00000000\\n_cell_angle_beta   117.82872259\\n_cell_angle_gamma   90.00000000\\n_symmetry_Int_Tables_number   15\\n_chemical_formula_structural   Fe(PO3)4\\n_chemical_formula_sum   'Fe4 P16 O48'\\n_cell_volume   919.60915179\\n_cell_formula_units_Z   4\\nloop_\\n _symmetry_equiv_pos_site_id\\n _symmetry_equiv_pos_as_xyz\\n  1  'x, y, z'\\n  2  '-x, -y, -z'\\n  3  '-x, y, -z+1/2'\\n  4  'x, -y, z+1/2'\\n  5  'x+1/2, y+1/2, z'\\n  6  '-x+1/2, -y+1/2, -z'\\n  7  '-x+1/2, y+1/2, -z+1/2'\\n  8  'x+1/2, -y+1/2, z+1/2'\\nloop_\\n _atom_site_type_symbol\\n _atom_site_label\\n _atom_site_symmetry_multiplicity\\n _atom_site_fract_x\\n _atom_site_fract_y\\n _atom_site_fract_z\\n _atom_site_occupancy\\n  Fe  Fe0  4  0.25000000  0.25000000  0.00000000  1.0\\n  P  P1  8  0.00775150  0.25477350  0.01545650  1.0\\n  P  P2  8  0.17938000  0.48936000  0.68901950  1.0\\n  O  O3  8  0.00440550  0.09087650  0.41672150  1.0\\n  O  O4  8  0.06702500  0.38903000  0.15113250  1.0\\n  O  O5  8  0.07438000  0.25932800  0.92669550  1.0\\n  O  O6  8  0.12242950  0.33020750  0.57963650  1.0\\n  O  O7  8  0.22790750  0.43332850  0.84626750  1.0\\n  O  O8  8  0.23587450  0.07259050  0.85420150  1.0\\n_Bandgap_eV: 0.00\\n\\n\")]"
+       "110"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,11 +272,11 @@
     "import gzip\n",
     "\n",
     "# load the data\n",
-    "with gzip.open('BG_cifs_process_steps/BG_cifs_more_dedup.pkl.gz', 'rb') as f:\n",
+    "with gzip.open('CIF_BG_proj/BG_cifs_process_steps/BG_cifs_more_dedup.pkl.gz', 'rb') as f:\n",
     "    BG_cifs_more_dedup = pickle.load(f)\n",
     "\n",
-    "# display the first few entries\n",
-    "BG_cifs_more_dedup[:1]"
+    "# display length of the data\n",
+    "len(BG_cifs_more_dedup)"
    ]
   },
   {
@@ -403,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +412,7 @@
        "  \"# generated using pymatgen\\ndata_K4Fe4Co4P8O32\\nloop_\\n _atom_type_symbol\\n _atom_type_electronegativity\\n _atom_type_radius\\n _atom_type_ionic_radius\\n  K  0.8200  2.2000  1.5200\\n  Fe  1.8300  1.4000  0.8525\\n  Co  1.8800  1.3500  0.7683\\n  P  2.1900  1.0000  0.5500\\n  O  3.4400  0.6000  1.2600\\n_symmetry_space_group_name_H-M   P2_1/c\\n_cell_length_a   5.2211\\n_cell_length_b   14.6317\\n_cell_length_c   9.3914\\n_cell_angle_alpha   90.0000\\n_cell_angle_beta   104.7150\\n_cell_angle_gamma   90.0000\\n_symmetry_Int_Tables_number   14\\n_chemical_formula_structural   KFeCo(PO4)2\\n_chemical_formula_sum   'K4 Fe4 Co4 P8 O32'\\n_cell_volume   693.9139\\n_cell_formula_units_Z   4\\nloop_\\n _symmetry_equiv_pos_site_id\\n _symmetry_equiv_pos_as_xyz\\n  1  'x, y, z'\\nloop_\\n _atom_site_type_symbol\\n _atom_site_label\\n _atom_site_symmetry_multiplicity\\n _atom_site_fract_x\\n _atom_site_fract_y\\n _atom_site_fract_z\\n _atom_site_occupancy\\n  K  K0  4  0.1790  0.1749  0.3158  1.0\\n  Fe  Fe1  4  0.2256  0.6282  0.8817  1.0\\n  Co  Co2  4  0.2436  0.0477  0.9633  1.0\\n  P  P3  4  0.2558  0.6727  0.5379  1.0\\n  P  P4  4  0.3097  0.0070  0.6766  1.0\\n  O  O5  4  0.0638  0.0489  0.7237  1.0\\n  O  O6  4  0.0892  0.5864  0.4694  1.0\\n  O  O7  4  0.1172  0.7445  0.9448  1.0\\n  O  O8  4  0.2214  0.5796  0.0838  1.0\\n  O  O9  4  0.2308  0.6890  0.6963  1.0\\n  O  O10  4  0.4157  0.0800  0.5860  1.0\\n  O  O11  4  0.4531  0.1662  0.9676  1.0\\n  O  O12  4  0.4913  0.0151  0.1759  1.0\\nBandgap_eV: 0.27\\n\\n\")]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +423,7 @@
     "import gzip\n",
     "\n",
     "# load the data\n",
-    "with gzip.open('BG_cifs_process_steps/BG_large_train.pkl.gz', 'rb') as f:\n",
+    "with gzip.open('CIF_BG_proj/BG_cifs_process_steps/BG_large_train.pkl.gz', 'rb') as f:\n",
     "    BG_cifs_more_test = pickle.load(f)\n",
     "\n",
     "# display the first few entries\n",
@@ -440,79 +439,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading data from BG_cifs_process_steps/BG_large_train.pkl.gz...\n",
-      "loading data from BG_cifs_process_steps/BG_large_val.pkl.gz...\n",
-      "preparing files...: 100%|██████████████| 98105/98105 [00:01<00:00, 80192.77it/s]\n",
-      "preparing files...: 100%|██████████████| 10901/10901 [00:00<00:00, 79395.89it/s]\n",
-      "tokenizing...: 100%|████████████████████| 98105/98105 [00:31<00:00, 3138.52it/s]\n",
+      "Tokens: ['Ba', '<unk>', ' ', '0', '.', '2', '7']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from crystallm import (\n",
+    "    _tokenizer_cifextd\n",
+    ")\n",
+    "from importlib import reload\n",
+    "reload(_tokenizer_cifextd)\n",
+    "\n",
+    "from crystallm import (\n",
+    "    CIFTokenizer_extd,\n",
+    ")\n",
+    "\n",
+    "tokenizer = CIFTokenizer_extd()\n",
+    "sample_cif = \"Bandgap_eV: 0.27\"\n",
+    "tokens = tokenizer.tokenize_cif(sample_cif)\n",
+    "print(\"Tokens:\", tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading data from CIF_BG_proj/BG_cifs_process_steps/BG_large_train.pkl.gz...\n",
+      "loading data from CIF_BG_proj/BG_cifs_process_steps/BG_large_val.pkl.gz...\n",
+      "preparing files...: 100%|██████████████| 98105/98105 [00:01<00:00, 69981.39it/s]\n",
+      "preparing files...: 100%|██████████████| 10901/10901 [00:00<00:00, 59366.02it/s]\n",
+      "tokenizing...: 100%|████████████████████| 98105/98105 [00:32<00:00, 2995.77it/s]\n",
       "train min tokenized length: 197\n",
       "train max tokenized length: 6,930\n",
       "train mean tokenized length: 578.89 +/- 462.86\n",
       "train total unk counts: 0\n",
-      "tokenizing...: 100%|████████████████████| 10901/10901 [00:10<00:00, 1057.63it/s]\n",
+      "tokenizing...: 100%|█████████████████████| 10901/10901 [00:11<00:00, 922.49it/s]\n",
       "val min tokenized length: 200\n",
       "val max tokenized length: 6,451\n",
       "val mean tokenized length: 580.75 +/- 488.00\n",
       "val total unk counts: 0\n",
-      "concatenating train tokens...: 100%|██| 98105/98105 [00:00<00:00, 120095.20it/s]\n",
-      "concatenating val tokens...: 100%|████| 10901/10901 [00:00<00:00, 508113.75it/s]\n",
+      "concatenating train tokens...: 100%|██| 98105/98105 [00:00<00:00, 185326.88it/s]\n",
+      "concatenating val tokens...: 100%|████| 10901/10901 [00:00<00:00, 487182.82it/s]\n",
       "encoding...\n",
       "train has 56,791,747 tokens\n",
       "val has 6,330,790 tokens\n",
       "vocab size: 372\n",
       "exporting to .bin files...\n",
       "creating tar.gz archive...\n",
-      "tarball created at BG_large_tokens/BG_large_tokens.tar.gz\n"
+      "tarball created at CIF_BG_proj/BG_large_tokens/BG_large_tokens.tar.gz\n"
      ]
     }
    ],
    "source": [
     "# try to tokenize the data\n",
-    "!python bin/tokenize_cifs.py \\\n",
-    "--train_fname BG_cifs_process_steps/BG_large_train.pkl.gz \\\n",
-    "--val_fname BG_cifs_process_steps/BG_large_val.pkl.gz \\\n",
-    "--out_dir BG_large_tokens/ \\\n",
-    "--workers 4"
+    "!python bin/tokenize_cifs_cifextd.py \\\n",
+    "--train_fname CIF_BG_proj/BG_cifs_process_steps/BG_large_train.pkl.gz \\\n",
+    "--val_fname CIF_BG_proj/BG_cifs_process_steps/BG_large_val.pkl.gz \\\n",
+    "--out_dir CIF_BG_proj/BG_large_tokens \\\n",
+    "--workers 4\n",
+    "\n",
+    "# # try to tokenize the data\n",
+    "# !python bin/tokenize_cifs_cifextd.py \\\n",
+    "# --train_fname CIF_BG_proj/BG_cifs_process_steps/BG_cifs_more_train.pkl.gz \\\n",
+    "# --val_fname CIF_BG_proj/BG_cifs_process_steps/BG_cifs_more_val.pkl.gz \\\n",
+    "# --out_dir test/ \\\n",
+    "# --workers 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decoded train data: data_Mg8V8Bi8O40\n",
+      "Decoded train data: data_Zn4Fe4Ge8O24\n",
       "loop_\n",
       "_atom_type_symbol\n",
       "_atom_type_electronegativity\n",
       "_atom_type_radius\n",
       "_atom_type_ionic_radius\n",
-      "Mg 1.3100 1.5000 0.8600\n",
-      "V 1.6300 1.3500 0.7775\n",
-      "Bi 2.0200 1.6000 1.0350\n",
+      "Zn 1.6500 1.3500 0.8800\n",
+      "Fe 1.8300 1.4000 0.8525\n",
+      "Ge 2.0100 1.2500 0.7700\n",
       "O 3.4400 0.6000 1.2600\n",
-      "_symmetry_space_group_name_H-M Pbca\n",
-      "_cell_length_a 5.2794\n",
-      "_cell_length_b 15.6039\n",
-      "_cell_length_c 10.7107\n",
+      "_symmetry_space_group_name_H-M C2/c\n",
+      "_cell_length_a 10.0434\n",
+      "_cell_length_b 9.4187\n",
+      "_cell_length_c 5.3906\n",
       "_cell_angle_alpha 90.0000\n",
-      "_cell_angle_beta 90.0000\n",
+      "_cell_angle_beta 106.0476\n",
       "_cell_angle_gamma 90.0000\n",
-      "_symmetry_Int_Tables_number 61\n",
-      "_chemical_formula_structural MgVBiO5\n",
-      "_chemical_formula_sum 'Mg8 V8 Bi8 O40'\n",
-      "_cell_volume 882.3340\n",
-      "_cell_formula_units_Z 8\n",
+      "_symmetry_Int_Tables_number 15\n",
+      "_chemical_formula_structural ZnFe(GeO3)2\n",
+      "_chemical_formula_sum 'Zn4 Fe4 Ge8 O24'\n",
+      "_cell_volume 490.0609\n",
+      "_cell_formula_units_Z 4\n",
       "loop_\n",
       "_symmetry_equiv_pos_site_id\n",
       "_symmetry_equiv_pos_as_xyz\n",
@@ -525,37 +561,36 @@
       "_atom_site_fract_y\n",
       "_atom_site_fract_z\n",
       "_atom_site_occupancy\n",
-      "Mg Mg0 8 0.0062 0.5464 0.8627 1.0\n",
-      "V V1 8 0.0146 0.0919 0.1011 1.0\n",
-      "Bi Bi2 8 0.0221 0.7259 0.6464 1.0\n",
-      "O O3 8 0.0732 0.1930 0.1719 1.0\n",
-      "O O4 8 0.1379 0.5202 0.3022 1.0\n",
-      "O O5 8 0.1882 0.6176 0.5250 1.0\n",
-      "O O6 8 0.1969 0.5561 0.0422 1.0\n",
-      "O O7 8 0.2053 0.6490 0.7842 1.0\n",
-      "Bandgap_eV: 2.96\n",
+      "Zn Zn0 4 0.0000 0.2501 0.2500 1.0\n",
+      "Fe Fe1 4 0.0000 0.0972 0.7500 1.0\n",
+      "Ge Ge2 8 0.1994 0.4112 0.7549 1.0\n",
+      "O O3 8 0.1148 0.2573 0.6092 1.0\n",
+      "O O4 8 0.1168 0.0865 0.1467 1.0\n",
+      "O O5 8 0.1424 0.4415 0.0389 1.0\n",
+      "Bandgap_eV 1.28\n",
       "\n",
-      "data_Ti4Ga2Cu2\n",
+      "data_P4H24N4O16\n",
       "loop_\n",
       "_atom_type_symbol\n",
       "_atom_type_electronegativity\n",
       "_atom_type_radius\n",
       "_atom_type_ionic_radius\n",
-      "Ti 1.5400 1.4000 0.8517\n",
-      "Ga 1.8100 1.3000 0.7600\n",
-      "Cu 1.9000 1.3500 0.8200\n",
-      "_symmetry_space_group_name_H-M Immm\n",
-      "_cell_length_a 10.3022\n",
-      "_cell_length_b 10.6083\n",
-      "_cell_length_c 14.8295\n",
+      "P 2.1900 1.0000 0.5500\n",
+      "H 2.2000 0.2500 0.0000\n",
+      "N 3.0400 0.6500 0.6300\n",
+      "O 3.4400 0.6000 1.2600\n",
+      "_symmetry_space_group_name_H-M I-42d\n",
+      "_cell_length_a 7.3873\n",
+      "_cell_length_b 7.3873\n",
+      "_cell_length_c 7.9485\n",
       "_cell_angle_alpha 90.0000\n",
       "_cell_angle_beta 90.0000\n",
       "_cell_angle_gamma 90.0000\n",
-      "_symmetry_Int_Tables_number 71\n",
-      "_chemical_formula_structural Ti2GaCu\n",
-      "_chemical_formula_sum 'Ti4 Ga2 Cu2'\n",
-      "_cell_volume 1620.6897\n",
-      "_cell_formula_units_Z 2\n",
+      "_symmetry_Int_Tables_number 122\n",
+      "_chemical_formula_structural PH6NO4\n",
+      "_chemical_formula_sum 'P4 H24 N4 O16'\n",
+      "_cell_volume 433.7637\n",
+      "_cell_formula_units_Z 4\n",
       "loop_\n",
       "_symmetry_equiv_pos_site_id\n",
       "_symmetry_equiv_pos_as_xyz\n",
@@ -568,16 +603,17 @@
       "_atom_site_fract_y\n",
       "_atom_site_fract_z\n",
       "_atom_site_occupancy\n",
-      "Ti Ti0 4 0.2428 0.0000 0.0000 1.0\n",
-      "Ga Ga1 2 0.0000 0.5000 0.5000 1.0\n",
-      "Cu Cu2 2 0.0000 0.0000 0.0000 1.0\n",
-      "Bandgap_eV: 0.02\n",
+      "P P0 4 0.0000 0.0000 0.0000 1.0\n",
+      "H H1 16 0.0195 0.1146 0.4261 1.0\n",
+      "H H2 8 0.1453 0.7500 0.1250 1.0\n",
+      "N N3 4 0.0000 0.0000 0.5000 1.0\n",
+      "O O4 16 0.0876 0.3488 0.3593 1.0\n",
+      "Bandgap_eV 5.79\n",
       "\n",
-      "data_Cs8Nd4Ag4Cl24\n",
+      "data_Ta8Zn16O36\n",
       "loop_\n",
       "_atom_type_symbol\n",
-      "_atom_type_electronegativity\n",
-      "_atom_type_radi\n"
+      "_atom_type_electronegati\n"
      ]
     }
    ],
@@ -586,21 +622,21 @@
     "import numpy as np\n",
     "import pickle\n",
     "import importlib\n",
-    "from crystallm import _tokenizer\n",
+    "from crystallm import _tokenizer_cifextd\n",
     "\n",
     "# Reload the CIFTokenizer module to apply changes\n",
-    "importlib.reload(_tokenizer)\n",
+    "importlib.reload(_tokenizer_cifextd)\n",
     "\n",
     "# Import the CIFTokenizer class\n",
-    "from crystallm._tokenizer import CIFTokenizer\n",
+    "from crystallm._tokenizer_cifextd import CIFTokenizer_extd\n",
     "\n",
     "# Load tokenized data\n",
-    "train_data_path = \"BG_large_tokens/train.bin\"\n",
-    "val_data_path = \"BG_large_tokens/val.bin\"\n",
-    "meta_path = \"BG_large_tokens/meta.pkl\"\n",
+    "train_data_path = \"test/train.bin\"\n",
+    "val_data_path = \"test/val.bin\"\n",
+    "meta_path = \"test/meta.pkl\"\n",
     "\n",
     "# Load the tokenizer and tokenized data\n",
-    "tokenizer = CIFTokenizer()\n",
+    "tokenizer = CIFTokenizer_extd()\n",
     "\n",
     "# Load metadata (stoi, itos)\n",
     "with open(meta_path, \"rb\") as f:\n",
@@ -670,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +731,7 @@
     }
    ],
    "source": [
-    "!python bin/tokenize_cifs.py \\\n",
+    "!python bin/tokenize_cifs_cifextd.py \\\n",
     "--train_fname cifs_v1_test.pkl.gz \\\n",
     "--out_dir tokens_v1_train_val/ \\\n",
     "--workers 4"
@@ -834,37 +870,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "identifying starts...: 100%|████| 56791747/56791747 [01:29<00:00, 633529.56it/s]\n",
-      "writing start indices...\n"
+      "identifying starts...: 100%|████| 56791747/56791747 [01:21<00:00, 697069.42it/s]\n",
+      "identifying starts...: 100%|██████| 6330790/6330790 [00:08<00:00, 726612.59it/s]\n"
      ]
     }
    ],
    "source": [
     "# Identifying start indices\n",
     "!python bin/identify_starts.py \\\n",
-    "--dataset_fname compressed_datasets_models/BG_large_tokens.tar.gz \\\n",
+    "--dataset_fname CIF_BG_proj/BG_large_tokens/BG_large_tokens.tar.gz \\\n",
     "--out_fname CIF_BG_proj/BG_large_tokens/starts.pkl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 519, 849, 1245, 1509]"
+       "[0, 425, 852, 1243, 1569]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
